import * as pintora from '@pintora/core'
import { EXAMPLES } from '@pintora/test-shared'
import { testDraw, prepareDiagramConfig, stripDrawResultForSnapshot } from '../../__tests__/test-util'
import { erDiagram } from '../index'

describe('er-artist', () => {
  beforeAll(() => {
    prepareDiagramConfig()
    pintora.diagramRegistry.registerDiagram('erDiagram', erDiagram)
  })

  it('will not throw error', () => {
    expect(testDraw(EXAMPLES.erLarge.code).graphicIR).toBeTruthy()
  })

  it('will process containerSize and @useMaxWidth', () => {
    const code = `
    erDiagram
    @param useMaxWidth true
    artists {
      INTEGER ArtistId
      NVARCHAR Name
    }
    albums
    `
    const result = testDraw(code, { containerSize: { width: 1000 } })
    expect(Math.round(result.graphicIR.width)).toBe(1000)
  })

  it('will draw inheritance', () => {
    const code = `
    erDiagram
    person {
      int age
      string phone_number
    }

    customer inherit person
    deliverer inherit person

    customer {
      string address "deliver address"
      string id PK
    }
    `
    expect(stripDrawResultForSnapshot(testDraw(code))).toMatchSnapshot()
  })

  it('can parse and handle bindClass', () => {
    const code = `
    erDiagram
    e1 {
      int age
    }
    e2 {
      string name
    }

    @bindClass entity-e1 test-class
    `
    expect(stripDrawResultForSnapshot(testDraw(code))).toMatchSnapshot()
  })

  it('attaches an ER ASCII text plan with connector line ops', () => {
    const code = `
    erDiagram
      CUSTOMER ||--o{ ORDER : places
      CUSTOMER {
        string id
      }
      ORDER {
        int order_number PK
      }
    `
    const result = testDraw(code)
    const plan = result.graphicIR.rendererData?.ascii?.plan

    expect(plan).toBeTruthy()
    expect(plan?.ops).toEqual(expect.arrayContaining([expect.objectContaining({ type: 'line' })]))
    expect(plan?.ops).toEqual(expect.arrayContaining([expect.objectContaining({ type: 'text', text: 'places' })]))
  })
})
