// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`er-artist can parse and handle bindClass 1`] = `
{
  "mark": {
    "attrs": {},
    "children": [
      {
        "children": [],
        "class": "er__relations",
        "type": "group",
      },
      {
        "attrs": {
          "id": "e1",
        },
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 2,
              "stroke": "#3b4044",
              "text": "",
            },
            "class": "er__entity-box",
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "id": "entity-e1",
              "text": "e1",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "class": "er__entity-label",
            "type": "text",
          },
          {
            "attrs": {},
            "children": [
              {
                "attrs": {},
                "children": [
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#3b4044",
                      "fontFamily": "Source Code Pro, sans-serif",
                      "fontSize": 11.9,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "id": "entity-e1-attr-1-type",
                      "text": "int",
                      "textAlign": "left",
                      "textBaseline": "middle",
                    },
                    "class": "er__entity-label",
                    "type": "text",
                  },
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#3b4044",
                      "fontFamily": "Source Code Pro, sans-serif",
                      "fontSize": 11.9,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "id": "entity-e1-attr-1-name",
                      "text": "age",
                      "textAlign": "left",
                      "textBaseline": "middle",
                    },
                    "class": "er__entity-label",
                    "type": "text",
                  },
                ],
                "type": "group",
              },
            ],
            "type": "group",
          },
        ],
        "class": "er__entity test-class",
        "itemId": "entity-e1",
        "type": "group",
      },
      {
        "attrs": {
          "id": "e2",
        },
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 2,
              "stroke": "#3b4044",
              "text": "",
            },
            "class": "er__entity-box",
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "id": "entity-e2",
              "text": "e2",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "class": "er__entity-label",
            "type": "text",
          },
          {
            "attrs": {},
            "children": [
              {
                "attrs": {},
                "children": [
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#3b4044",
                      "fontFamily": "Source Code Pro, sans-serif",
                      "fontSize": 11.9,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "id": "entity-e2-attr-1-type",
                      "text": "string",
                      "textAlign": "left",
                      "textBaseline": "middle",
                    },
                    "class": "er__entity-label",
                    "type": "text",
                  },
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#3b4044",
                      "fontFamily": "Source Code Pro, sans-serif",
                      "fontSize": 11.9,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "id": "entity-e2-attr-1-name",
                      "text": "name",
                      "textAlign": "left",
                      "textBaseline": "middle",
                    },
                    "class": "er__entity-label",
                    "type": "text",
                  },
                ],
                "type": "group",
              },
            ],
            "type": "group",
          },
        ],
        "class": "er__entity",
        "itemId": "entity-e2",
        "type": "group",
      },
      {
        "attrs": {},
        "children": [],
        "type": "group",
      },
    ],
    "type": "group",
  },
  "rendererData": {
    "ascii": {
      "layout": {
        "bindRules": [
          {
            "className": "test-class",
            "nodes": [
              "entity-e1",
            ],
          },
        ],
        "configParams": [],
        "entities": {
          "e1": {
            "attributes": [
              {
                "attributeName": "age",
                "attributeType": "int",
                "comment": "",
              },
            ],
            "itemId": "entity-e1",
            "name": "e1",
          },
          "e2": {
            "attributes": [
              {
                "attributeName": "name",
                "attributeType": "string",
                "comment": "",
              },
            ],
            "itemId": "entity-e2",
            "name": "e2",
          },
        },
        "inheritances": [],
        "overrideConfig": {},
        "relationships": [],
        "styleRules": [],
        "title": "",
      },
      "plan": {
        "height": 5,
        "ops": [
          {
            "height": 5,
            "type": "rect",
            "width": 12,
            "x": 0,
            "y": 0,
          },
          {
            "align": "center",
            "text": "e1",
            "type": "text",
            "x": 6,
            "y": 1,
          },
          {
            "from": {
              "x": 1,
              "y": 2,
            },
            "to": {
              "x": 10,
              "y": 2,
            },
            "type": "line",
          },
          {
            "text": "int age",
            "type": "text",
            "x": 2,
            "y": 3,
          },
          {
            "height": 5,
            "type": "rect",
            "width": 15,
            "x": 18,
            "y": 0,
          },
          {
            "align": "center",
            "text": "e2",
            "type": "text",
            "x": 25,
            "y": 1,
          },
          {
            "from": {
              "x": 19,
              "y": 2,
            },
            "to": {
              "x": 31,
              "y": 2,
            },
            "type": "line",
          },
          {
            "text": "string name",
            "type": "text",
            "x": 20,
            "y": 3,
          },
        ],
        "width": 33,
      },
    },
  },
}
`;

exports[`er-artist will draw inheritance 1`] = `
{
  "mark": {
    "attrs": {},
    "children": [
      {
        "children": [],
        "class": "er__relations",
        "type": "group",
      },
      {
        "attrs": {
          "id": "person",
        },
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 2,
              "stroke": "#3b4044",
              "text": "",
            },
            "class": "er__entity-box",
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "id": "entity-person",
              "text": "person",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "class": "er__entity-label",
            "type": "text",
          },
          {
            "attrs": {},
            "children": [
              {
                "attrs": {},
                "children": [
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#3b4044",
                      "fontFamily": "Source Code Pro, sans-serif",
                      "fontSize": 11.9,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "id": "entity-person-attr-1-type",
                      "text": "int",
                      "textAlign": "left",
                      "textBaseline": "middle",
                    },
                    "class": "er__entity-label",
                    "type": "text",
                  },
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#3b4044",
                      "fontFamily": "Source Code Pro, sans-serif",
                      "fontSize": 11.9,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "id": "entity-person-attr-1-name",
                      "text": "age",
                      "textAlign": "left",
                      "textBaseline": "middle",
                    },
                    "class": "er__entity-label",
                    "type": "text",
                  },
                ],
                "type": "group",
              },
              {
                "attrs": {},
                "children": [
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#3b4044",
                      "fontFamily": "Source Code Pro, sans-serif",
                      "fontSize": 11.9,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "id": "entity-person-attr-2-type",
                      "text": "string",
                      "textAlign": "left",
                      "textBaseline": "middle",
                    },
                    "class": "er__entity-label",
                    "type": "text",
                  },
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#3b4044",
                      "fontFamily": "Source Code Pro, sans-serif",
                      "fontSize": 11.9,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "id": "entity-person-attr-2-name",
                      "text": "phone_number",
                      "textAlign": "left",
                      "textBaseline": "middle",
                    },
                    "class": "er__entity-label",
                    "type": "text",
                  },
                ],
                "type": "group",
              },
            ],
            "type": "group",
          },
        ],
        "class": "er__entity",
        "itemId": "entity-person",
        "type": "group",
      },
      {
        "attrs": {
          "id": "customer",
        },
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 2,
              "stroke": "#3b4044",
              "text": "",
            },
            "class": "er__entity-box",
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "id": "entity-customer",
              "text": "customer",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "class": "er__entity-label",
            "type": "text",
          },
          {
            "attrs": {},
            "children": [
              {
                "attrs": {},
                "children": [
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#3b4044",
                      "fontFamily": "Source Code Pro, sans-serif",
                      "fontSize": 11.9,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "id": "entity-customer-attr-1-type",
                      "text": "string",
                      "textAlign": "left",
                      "textBaseline": "middle",
                    },
                    "class": "er__entity-label",
                    "type": "text",
                  },
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#3b4044",
                      "fontFamily": "Source Code Pro, sans-serif",
                      "fontSize": 11.9,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "id": "entity-customer-attr-1-name",
                      "text": "address",
                      "textAlign": "left",
                      "textBaseline": "middle",
                    },
                    "class": "er__entity-label",
                    "type": "text",
                  },
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#3b4044",
                      "fontFamily": "Source Code Pro, sans-serif",
                      "fontSize": 11.9,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "id": "entity-customer-attr-1-name",
                      "text": "deliver address",
                      "textAlign": "left",
                      "textBaseline": "middle",
                    },
                    "class": "er__entity-label",
                    "type": "text",
                  },
                ],
                "type": "group",
              },
              {
                "attrs": {},
                "children": [
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#3b4044",
                      "fontFamily": "Source Code Pro, sans-serif",
                      "fontSize": 11.9,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "id": "entity-customer-attr-2-key",
                      "text": "PK",
                      "textAlign": "left",
                      "textBaseline": "middle",
                    },
                    "class": "er__entity-label",
                    "type": "text",
                  },
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#3b4044",
                      "fontFamily": "Source Code Pro, sans-serif",
                      "fontSize": 11.9,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "id": "entity-customer-attr-2-type",
                      "text": "string",
                      "textAlign": "left",
                      "textBaseline": "middle",
                    },
                    "class": "er__entity-label",
                    "type": "text",
                  },
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                  {
                    "attrs": {
                      "fill": "#3b4044",
                      "fontFamily": "Source Code Pro, sans-serif",
                      "fontSize": 11.9,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "id": "entity-customer-attr-2-name",
                      "text": "id",
                      "textAlign": "left",
                      "textBaseline": "middle",
                    },
                    "class": "er__entity-label",
                    "type": "text",
                  },
                  {
                    "attrs": {
                      "fill": "#fffbf9",
                      "stroke": "#3b4044",
                    },
                    "type": "rect",
                  },
                ],
                "type": "group",
              },
            ],
            "type": "group",
          },
        ],
        "class": "er__entity",
        "itemId": "entity-customer",
        "type": "group",
      },
      {
        "attrs": {
          "id": "deliverer",
        },
        "children": [
          {
            "attrs": {
              "fill": "#fdb05e",
              "radius": 2,
              "stroke": "#3b4044",
              "text": "",
            },
            "class": "er__entity-box",
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "id": "entity-deliverer",
              "text": "deliverer",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "class": "er__entity-label",
            "type": "text",
          },
          {
            "attrs": {},
            "children": [],
            "type": "group",
          },
        ],
        "class": "er__entity",
        "itemId": "entity-deliverer",
        "type": "group",
      },
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "fill": "#fffbf9",
              "lineJoin": "round",
              "stroke": "#3b4044",
            },
            "type": "path",
          },
          {
            "attrs": {
              "fill": "#fffbf9",
              "lineJoin": "round",
              "stroke": "#3b4044",
            },
            "type": "path",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "text": "ISA",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "class": "er__relationship-label",
            "type": "text",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "text": "ISA",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "class": "er__relationship-label",
            "type": "text",
          },
          {
            "attrs": {
              "lineJoin": "round",
              "stroke": "#3b4044",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineJoin": "round",
              "stroke": "#3b4044",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineJoin": "round",
              "stroke": "#3b4044",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineJoin": "round",
              "stroke": "#3b4044",
            },
            "type": "path",
          },
        ],
        "type": "group",
      },
    ],
    "type": "group",
  },
  "rendererData": {
    "ascii": {
      "layout": {
        "bindRules": [],
        "configParams": [],
        "entities": {
          "customer": {
            "attributes": [
              {
                "attributeName": "address",
                "attributeType": "string",
                "comment": "deliver address",
              },
              {
                "attributeKey": "PK",
                "attributeName": "id",
                "attributeType": "string",
                "comment": "",
              },
            ],
            "itemId": "entity-customer",
            "name": "customer",
          },
          "deliverer": {
            "attributes": [],
            "itemId": "entity-deliverer",
            "name": "deliverer",
          },
          "person": {
            "attributes": [
              {
                "attributeName": "age",
                "attributeType": "int",
                "comment": "",
              },
              {
                "attributeName": "phone_number",
                "attributeType": "string",
                "comment": "",
              },
            ],
            "itemId": "entity-person",
            "name": "person",
          },
        },
        "inheritances": [
          {
            "sub": "customer",
            "sup": "person",
          },
          {
            "sub": "deliverer",
            "sup": "person",
          },
        ],
        "overrideConfig": {},
        "relationships": [],
        "styleRules": [],
        "title": "",
      },
      "plan": {
        "height": 17,
        "ops": [
          {
            "from": {
              "x": 18,
              "y": 10,
            },
            "stroke": "solid",
            "to": {
              "x": 18,
              "y": 7,
            },
            "type": "line",
          },
          {
            "from": {
              "x": 18,
              "y": 7,
            },
            "stroke": "solid",
            "to": {
              "x": 27,
              "y": 7,
            },
            "type": "line",
          },
          {
            "from": {
              "x": 27,
              "y": 7,
            },
            "stroke": "solid",
            "to": {
              "x": 27,
              "y": 6,
            },
            "type": "line",
          },
          {
            "align": "center",
            "text": "△",
            "type": "text",
            "x": 27,
            "y": 6,
          },
          {
            "align": "center",
            "text": "ISA",
            "type": "text",
            "x": 27,
            "y": 7,
          },
          {
            "from": {
              "x": 48,
              "y": 10,
            },
            "stroke": "solid",
            "to": {
              "x": 48,
              "y": 8,
            },
            "type": "line",
          },
          {
            "from": {
              "x": 48,
              "y": 8,
            },
            "stroke": "solid",
            "to": {
              "x": 27,
              "y": 8,
            },
            "type": "line",
          },
          {
            "from": {
              "x": 27,
              "y": 8,
            },
            "stroke": "solid",
            "to": {
              "x": 27,
              "y": 6,
            },
            "type": "line",
          },
          {
            "align": "center",
            "text": "△",
            "type": "text",
            "x": 27,
            "y": 6,
          },
          {
            "align": "center",
            "text": "ISA",
            "type": "text",
            "x": 27,
            "y": 8,
          },
          {
            "height": 6,
            "type": "rect",
            "width": 23,
            "x": 16,
            "y": 0,
          },
          {
            "align": "center",
            "text": "person",
            "type": "text",
            "x": 27,
            "y": 1,
          },
          {
            "from": {
              "x": 17,
              "y": 2,
            },
            "to": {
              "x": 37,
              "y": 2,
            },
            "type": "line",
          },
          {
            "text": "int age",
            "type": "text",
            "x": 18,
            "y": 3,
          },
          {
            "text": "string phone_number",
            "type": "text",
            "x": 18,
            "y": 4,
          },
          {
            "height": 6,
            "type": "rect",
            "width": 36,
            "x": 0,
            "y": 11,
          },
          {
            "align": "center",
            "text": "customer",
            "type": "text",
            "x": 18,
            "y": 12,
          },
          {
            "from": {
              "x": 1,
              "y": 13,
            },
            "to": {
              "x": 34,
              "y": 13,
            },
            "type": "line",
          },
          {
            "text": "string address "deliver address"",
            "type": "text",
            "x": 2,
            "y": 14,
          },
          {
            "text": "PK string id",
            "type": "text",
            "x": 2,
            "y": 15,
          },
          {
            "height": 3,
            "type": "rect",
            "width": 13,
            "x": 42,
            "y": 11,
          },
          {
            "align": "center",
            "text": "deliverer",
            "type": "text",
            "x": 48,
            "y": 12,
          },
        ],
        "width": 55,
      },
    },
  },
}
`;
